# ConsoleExtensions

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
ConsoleColorizedString/: ColorString.hpp  ColorWstring.hpp  ConsoleColorString.hpp
ConsoleColorizedString/src/: ColorString.cpp  ColorWstring.cpp  ConsoleColorString.cpp
ConsoleExtensions/: ConsoleExtensions.sln
ConsoleExtensions/ConsoleExtensions/: ConsoleExtensions.vcxproj
ConsoleExtensions/ConsoleTest/: ConsoleTest.vcxproj  main.cpp
ConsoleTest/: ConsoleTest.cpp
Extensions/: CMakeLists.txt
Extensions/Console/: CMakeLists.txt  main.cpp
Extensions/ConsoleColorizedString/: ColorString.cpp  ColorString.hpp  ColorWstring.cpp  ColorWstring.hpp  ConsoleColorString.hpp  EnumColors.hpp
Extensions/Libs/: CMakeLists.txt
Extensions/Libs/ConsoleColorizedString/: CMakeLists.txt  ColorString.cpp  ColorString.hpp  ColorWstring.hpp  ConsoleColorString.hpp
Extensions/Libs/ConsoleControls/: AsciiControls.hpp  CMakeLists.txt  ConsoleControls.hpp
Extensions/Libs/ConsoleExtControls/: AsciiControls.hpp  CMakeLists.txt
Extensions/Libs/ConsoleExtInterface/: CMakeLists.txt  ConsoleExtInterface.cpp  ConsoleExtInterface.hpp
Extensions/Libs/ConsoleExtensions/: CMakeLists.txt  ConsoleExtVersion.hpp  ConsoleExtVersionTools.hpp  LICENSE.txt  README.md  Version.hpp
Extensions/Libs/ConsoleExtensions/ConsoleColorizedString/: ColorString.cpp  ColorString.hpp  ColorWstring.hpp  README.md  StringExt.cpp  StringExt.hpp  StringTools.cpp  StringTools.hpp
Extensions/Libs/ConsoleExtensions/ConsoleDataTypes/: ConsoleDataTypes.hpp
Extensions/Libs/ConsoleExtensions/ConsoleExtControls/: AsciiControls.hpp  ConsoleControls.hpp  LowLevelControls.cpp  LowLevelControls.hpp  README.md
Extensions/Libs/ConsoleExtensions/ConsoleExtInterface/: AsciiGraphicInterface.hpp  ConsoleExtInterface.hpp  LICENSE.txt  README.md
Extensions/Libs/ConsoleExtensions/ErrorReport/: ConsoleExtException.hpp  README.md
Extensions/Libs/ErrorReport/: CMakeLists.txt  ConsoleExtException.hpp
